# Projects

./: .gitignore  README.md
Matrix/: CMakeLists.txt  Matrix.cbp  Matrix.depend  Matrix.h  Matrix.h.save-failed  Matrix.layout  Matrix_Test.cpp  main.cpp  test_addition.cpp  test_assign_add.cpp  test_assign_multiply.cpp  test_assign_subtract.cpp  test_assignment.cpp  test_constructor_destructor.cpp  test_determinant.cpp  test_equality.cpp  test_getandset.cpp  test_getnsetters.cpp  test_hilbert.cpp  test_identitymatrix.cpp  test_inequality.cpp  test_matrixinverse.cpp  test_matrixmultiply.cpp  test_multiplication.cpp  test_scalarmultiply.cpp  test_subtraction.cpp  test_transpose.cpp  utils.h
